# PowerBI-API-Python

./: .gitignore  README.md  credentials_update_driver.py  execute_query_by_id_driver.py  execute_query_driver.py  pyproject.toml  rebuild.sh  reports_sample_deriver.py  setup.py
.github/workflows/: pr.yaml  release-pypi.yaml
pbiapi/: __init__.py  pbiapi.py  test.py  utils.py
