[tool.poetry]
name = "pbiapi"
version = "0.1.0"
description = ""
authors = ["Scott Melhop <scott.melhop@cognite.com>"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["arrow", "autoimpute", "cognite", "cvxpy", "fancyimpute", "matplotlib", "numpy", "pandas", "pomegranate", "pykalman", "pymc3", "pytest", "ruptures", "scipy", "sklearn", "theano", "torch"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.761"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
